work in progress, many additions and changes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,4 +23,5 @@ open-ai-gpt-5-mini {
   # For GPT-5 is not configurable and is always set to the default value 1
   top-p = 1.0
   max-tokens = 100000
+  max-completion-tokens = 100000
 }
