add api for ai model config names

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,7 +12,7 @@ akka.javasdk {
   }# Configuration for OpenAI's large language models
 }
 
-open-ai-gpt-5-mini {
+ai-agent-model-open-ai-gpt-5-mini {
   provider = "openai"
   api-key = ""
   api-key = ${?OPENAI_API_KEY}
@@ -22,6 +22,6 @@ open-ai-gpt-5-mini {
   temperature = 1.0
   # For GPT-5 is not configurable and is always set to the default value 1
   top-p = 1.0
-  max-tokens = 100000
-  max-completion-tokens = 100000
+  max-tokens = 200000
+  max-completion-tokens = 200000
 }
