add ai model select from UI to agent

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,4 @@
-ai-agent-model-open-ai-gpt-5-mini {
+ai-agent-model-gpt-5-mini {
   provider = "openai"
   api-key = ""
   api-key = ${?OPENAI_API_KEY}
@@ -10,4 +10,50 @@ ai-agent-model-open-ai-gpt-5-mini {
   top-p = 1.0
   max-tokens = 200000
   max-completion-tokens = 200000
+}
+
+ai-agent-model-gpt-4_1 {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "gpt-4.1"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-tokens = 200000
+  max-completion-tokens = 200000
+}
+
+ai-agent-model-gpt-4_1-mini {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "gpt-4.1-mini"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-tokens = 200000
+  max-completion-tokens = 200000
+}
+
+ai-agent-model-gpt-4o {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "gpt-4o"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-tokens = 16384
+}
+
+ai-agent-model-gpt-4o-mini {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "gpt-4o-mini"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-tokens = 16384
 }
