add more models. add fix to play sound when agent has a failure

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,11 @@
+# ================================================
+# DO NOT use '.' (period) in model names
+# ================================================
+
+# ================================================
+# OpenAI models
+# ================================================
+
 ai-agent-model-gpt-5-mini {
   provider = "openai"
   api-key = ""
@@ -56,4 +64,78 @@ ai-agent-model-gpt-4o-mini {
   temperature = 1.0
   top-p = 1.0
   max-tokens = 16384
+}
+
+# ================================================
+# DO NOT use '.' (period) in model names
+# ================================================
+
+# ================================================
+# Google AI Gemini models
+# ================================================
+
+ai-agent-model-gemini-2_5-flash-lite {
+  # The provider name, must be "googleai-gemini"
+  provider = "googleai-gemini"
+  # The API key for authentication with Google AI Gemini's API
+  api-key = ""
+  # Environment variable override for the API key
+  api-key = ${?GOOGLE_AI_GEMINI_API_KEY}
+  # The name of the model to use, e.g. "gemini-2.0-flash", "gemini-1.5-flash", "gemini-1.5-pro" or "gemini-1.0-pro"
+  model-name = "gemini-2.5-flash-lite"
+  # Controls randomness in the model's output (0.0 to 1.0)
+  temperature = NaN
+  # Nucleus sampling parameter (0.0 to 1.0). Controls text generation by
+  # only considering the most likely tokens whose cumulative probability
+  # exceeds the threshold value. It helps balance between diversity and
+  # quality of outputs—lower values (like 0.3) produce more focused,
+  # predictable text while higher values (like 0.9) allow more creativity
+  # and variation.
+  top-p = NaN
+  # Maximum number of tokens to generate (-1 for model default)
+  max-output-tokens = -1
+}
+
+ai-agent-model-gemini-2_5-flash {
+  # The provider name, must be "googleai-gemini"
+  provider = "googleai-gemini"
+  # The API key for authentication with Google AI Gemini's API
+  api-key = ""
+  # Environment variable override for the API key
+  api-key = ${?GOOGLE_AI_GEMINI_API_KEY}
+  # The name of the model to use, e.g. "gemini-2.0-flash", "gemini-1.5-flash", "gemini-1.5-pro" or "gemini-1.0-pro"
+  model-name = "gemini-2.5-flash"
+  # Controls randomness in the model's output (0.0 to 1.0)
+  temperature = NaN
+  # Nucleus sampling parameter (0.0 to 1.0). Controls text generation by
+  # only considering the most likely tokens whose cumulative probability
+  # exceeds the threshold value. It helps balance between diversity and
+  # quality of outputs—lower values (like 0.3) produce more focused,
+  # predictable text while higher values (like 0.9) allow more creativity
+  # and variation.
+  top-p = NaN
+  # Maximum number of tokens to generate (-1 for model default)
+  max-output-tokens = -1
+}
+
+ai-agent-model-gemini-2_5-pro {
+  # The provider name, must be "googleai-gemini"
+  provider = "googleai-gemini"
+  # The API key for authentication with Google AI Gemini's API
+  api-key = ""
+  # Environment variable override for the API key
+  api-key = ${?GOOGLE_AI_GEMINI_API_KEY}
+  # The name of the model to use, e.g. "gemini-2.0-flash", "gemini-1.5-flash", "gemini-1.5-pro" or "gemini-1.0-pro"
+  model-name = "gemini-2.5-pro"
+  # Controls randomness in the model's output (0.0 to 1.0)
+  temperature = NaN
+  # Nucleus sampling parameter (0.0 to 1.0). Controls text generation by
+  # only considering the most likely tokens whose cumulative probability
+  # exceeds the threshold value. It helps balance between diversity and
+  # quality of outputs—lower values (like 0.3) produce more focused,
+  # predictable text while higher values (like 0.9) allow more creativity
+  # and variation.
+  top-p = NaN
+  # Maximum number of tokens to generate (-1 for model default)
+  max-output-tokens = -1
 }
