--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,6 +6,20 @@
 # OpenAI models
 # ================================================
 
+ai-agent-model-gpt-5 {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "gpt-5"
+  base-url = "https://api.openai.com/v1"
+  # For GPT-5 is not configurable and is always set to the default value 1
+  temperature = 1.0
+  # For GPT-5 is not configurable and is always set to the default value 1
+  top-p = 1.0
+  max-tokens = 200000
+  max-completion-tokens = 200000
+}
+
 ai-agent-model-gpt-5-mini {
   provider = "openai"
   api-key = ""
@@ -28,8 +42,7 @@ ai-agent-model-gpt-4_1 {
   base-url = "https://api.openai.com/v1"
   temperature = 1.0
   top-p = 1.0
-  max-tokens = 200000
-  max-completion-tokens = 200000
+  max-tokens = 32768
 }
 
 ai-agent-model-gpt-4_1-mini {
@@ -40,8 +53,7 @@ ai-agent-model-gpt-4_1-mini {
   base-url = "https://api.openai.com/v1"
   temperature = 1.0
   top-p = 1.0
-  max-tokens = 200000
-  max-completion-tokens = 200000
+  max-tokens = 32768
 }
 
 ai-agent-model-gpt-4o {
