--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,11 @@
-# ================================================
+# =================================================================================
+# All model configurations must be named ai-agent-model-<unique-model-key-name>
 # DO NOT use '.' (period) in model names
-# ================================================
+# =================================================================================
 
-# ================================================
+# =================================================================================
 # OpenAI models
-# ================================================
+# =================================================================================
 
 ai-agent-model-gpt-5 {
   provider = "openai"
@@ -78,13 +79,9 @@ ai-agent-model-gpt-4o-mini {
   max-tokens = 16384
 }
 
-# ================================================
-# DO NOT use '.' (period) in model names
-# ================================================
-
-# ================================================
+# =================================================================================
 # Google AI Gemini models
-# ================================================
+# =================================================================================
 
 ai-agent-model-gemini-2_5-flash-lite {
   # The provider name, must be "googleai-gemini"
