enable persistent local database

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,6 @@
+
+akka.javasdk.dev-mode.persistence.enabled = true
+
 # =================================================================================
 # All model configurations must be named ai-agent-model-<unique-model-key-name>
 # DO NOT use '.' (period) in model names
