add more agent models, dev log to file, and menu icon

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,7 +7,8 @@ akka.javasdk.dev-mode.persistence.enabled = true
 # =================================================================================
 
 # =================================================================================
-# OpenAI models
+# OpenAI models in rank order of best to least advanced capabilities
+# https://platform.openai.com/docs/models/overview
 # =================================================================================
 
 ai-agent-model-gpt-5 {
@@ -27,15 +28,62 @@ ai-agent-model-gpt-5 {
 ai-agent-model-gpt-5-mini {
   provider = "openai"
   api-key = ""
-  api-key = ${?OPENAI_API_KEY}
+  api-key = ${?openai_api_key}
   model-name = "gpt-5-mini"
   base-url = "https://api.openai.com/v1"
-  # For GPT-5 is not configurable and is always set to the default value 1
+  # for gpt-5 is not configurable and is always set to the default value 1
   temperature = 1.0
-  # For GPT-5 is not configurable and is always set to the default value 1
+  # for gpt-5 is not configurable and is always set to the default value 1
   top-p = 1.0
   max-tokens = 200000
   max-completion-tokens = 200000
+}
+
+ai-agent-model-gpt-5-nano {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?openai_api_key}
+  model-name = "gpt-5-nano"
+  base-url = "https://api.openai.com/v1"
+  # for gpt-5 is not configurable and is always set to the default value 1
+  temperature = 1.0
+  # for gpt-5 is not configurable and is always set to the default value 1
+  top-p = 1.0
+  max-tokens = 200000
+  max-completion-tokens = 200000
+}
+
+ai-agent-model-gpt-o3-pro {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "o3-pro"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-tokens = 200000
+}
+
+ai-agent-model-gpt-o3 {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "o3"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-tokens = 200000
+}
+
+ai-agent-model-gpt-o3-mini {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "o3-mini"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-tokens = 200000
 }
 
 ai-agent-model-gpt-4_1 {
