--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -62,6 +62,7 @@ ai-agent-model-gpt-o3-pro {
   temperature = 1.0
   top-p = 1.0
   max-tokens = 200000
+  max-completion-tokens = 200000
 }
 
 ai-agent-model-gpt-o3 {
@@ -72,7 +73,8 @@ ai-agent-model-gpt-o3 {
   base-url = "https://api.openai.com/v1"
   temperature = 1.0
   top-p = 1.0
-  max-tokens = 200000
+  #max-tokens = 200000
+  max-completion-tokens = 200000
 }
 
 ai-agent-model-gpt-o3-mini {
