change make move tool response to use way less tokens

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -26,7 +26,6 @@ ai-agent-model-gpt-5 {
   temperature = 1.0
   # For GPT-5 is not configurable and is always set to the default value 1
   top-p = 1.0
-  max-tokens = 200000
   max-completion-tokens = 200000
 }
 
@@ -34,14 +33,14 @@ ai-agent-model-gpt-5-mini = ${akka.javasdk.agent.openai}
 ai-agent-model-gpt-5-mini {
   provider = "openai"
   api-key = ""
-  api-key = ${?openai_api_key}
+  api-key = ${?OPENAI_API_KEY}
   model-name = "gpt-5-mini"
   base-url = "https://api.openai.com/v1"
   # for gpt-5 is not configurable and is always set to the default value 1
   temperature = 1.0
   # for gpt-5 is not configurable and is always set to the default value 1
   top-p = 1.0
-  max-tokens = 200000
+  max-tokens = 128000
   max-completion-tokens = 200000
 }
 
@@ -49,14 +48,13 @@ ai-agent-model-gpt-5-nano = ${akka.javasdk.agent.openai}
 ai-agent-model-gpt-5-nano {
   provider = "openai"
   api-key = ""
-  api-key = ${?openai_api_key}
+  api-key = ${?OPENAI_API_KEY}
   model-name = "gpt-5-nano"
   base-url = "https://api.openai.com/v1"
   # for gpt-5 is not configurable and is always set to the default value 1
   temperature = 1.0
   # for gpt-5 is not configurable and is always set to the default value 1
   top-p = 1.0
-  max-tokens = 200000
   max-completion-tokens = 200000
 }
 
