--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>helloworld-agent</name>
+  <name>me-dot-u-dot</name>
 
   <dependencies>
     <!-- Your dependencies go here -->
