add ollama config

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -205,3 +205,14 @@ ai-agent-model-claude-opus-4_1-20250805 {
   model-name = "claude-opus-4.1-20250805"
   base-url = "https://api.anthropic.com/v1"
 }
+
+# =================================================================================
+# Ollama models
+# =================================================================================
+
+ai-agent-model-ollama-gpt-oss-20b = ${akka.javasdk.agent.ollama}
+ai-agent-model-ollama-gpt-oss-20b {
+  provider = "ollama"
+  model-name = "gpt-oss:20b"
+  base-url = "http://localhost:11434"
+}
