--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,9 @@
 
 akka.javasdk.dev-mode.persistence.enabled = true
+#akka.persistence.r2dbc.connection-factory.database = ./some-name.db
+
+#akka.javasdk.dev-mode.http-port = 9001
+#akka.runtime.http.interface = 0.0.0.0
 
 # =================================================================================
 # https://doc.akka.io/java/model-provider-details.html#_reference_configurations
