--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,7 @@ akka.javasdk.dev-mode.persistence.enabled = true
 #akka.persistence.r2dbc.connection-factory.database = ./some-name.db
 
 #akka.javasdk.dev-mode.http-port = 9001
-#akka.runtime.http.interface = 0.0.0.0
+akka.runtime.http-interface = 0.0.0.0
 
 # =================================================================================
 # https://doc.akka.io/java/model-provider-details.html#_reference_configurations
