harden make move tool. add move think time

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,7 +3,10 @@ akka.javasdk.dev-mode.persistence.enabled = true
 #akka.persistence.r2dbc.connection-factory.database = ./some-name.db
 
 #akka.javasdk.dev-mode.http-port = 9001
-akka.runtime.http-interface = 0.0.0.0
+
+# Setting http-interface here is not working. use -Dakka.runtime.http-interface=0.0.0.0 instead
+#akka.runtime.http-interface = "0.0.0.0"
+# mvn clean compile exec:java -Dakka.runtime.http-interface=0.0.0.0
 
 # =================================================================================
 # https://doc.akka.io/java/model-provider-details.html#_reference_configurations
