--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   <parent>
     <groupId>io.akka</groupId>
     <artifactId>akka-javasdk-parent</artifactId>
-    <version>3.5.2-M7</version>
+    <version>3.5.2</version>
   </parent>
-  
+
   <groupId>com.example</groupId>
   <artifactId>me-dot-u-dot</artifactId>
   <version>1.0-SNAPSHOT</version>
