adjust log levels

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 
-akka.javasdk.dev-mode.persistence.enabled = false
+akka.javasdk.dev-mode.persistence.enabled = true
 #akka.persistence.r2dbc.connection-factory.database = ./some-name.db
 
 #akka.javasdk.dev-mode.http-port = 9001
