--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -185,6 +185,24 @@ ai-agent-model-gemini-2_5-pro {
 # Anthropic models
 # =================================================================================
 
+ai-agent-model-claude-sonnet-4-5-20250929 = ${akka.javasdk.agent.anthropic}
+ai-agent-model-claude-sonnet-4-5-20250929 {
+  provider = "anthropic"
+  api-key = ""
+  api-key = ${?ANTHROPIC_API_KEY}
+  model-name = "claude-sonnet-4-5-20250929"
+  base-url = "https://api.anthropic.com/v1"
+}
+
+ai-agent-model-claude-opus-4-1-20250805 = ${akka.javasdk.agent.anthropic}
+ai-agent-model-claude-opus-4-1-20250805 {
+  provider = "anthropic"
+  api-key = ""
+  api-key = ${?ANTHROPIC_API_KEY}
+  model-name = "claude-opus-4-1-20250805"
+  base-url = "https://api.anthropic.com/v1"
+}
+
 ai-agent-model-claude-sonnet-4-20250514 = ${akka.javasdk.agent.anthropic}
 ai-agent-model-claude-sonnet-4-20250514 {
   provider = "anthropic"
@@ -200,15 +218,6 @@ ai-agent-model-claude-opus-4-20250514 {
   api-key = ""
   api-key = ${?ANTHROPIC_API_KEY}
   model-name = "claude-opus-4-20250514"
-  base-url = "https://api.anthropic.com/v1"
-}
-
-ai-agent-model-claude-opus-4_1-20250805 = ${akka.javasdk.agent.anthropic}
-ai-agent-model-claude-opus-4_1-20250805 {
-  provider = "anthropic"
-  api-key = ""
-  api-key = ${?ANTHROPIC_API_KEY}
-  model-name = "claude-opus-4.1-20250805"
   base-url = "https://api.anthropic.com/v1"
 }
 
