--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .bloop
 .idea
 *.db
+.cp.txt
 akka-context/
 
 # Java - from https://raw.githubusercontent.com/github/gitignore/master/Java.gitignore
