add turn completed command and event to bookend when an agent completes a turn

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>com.example</groupId>
   <artifactId>me-dot-u-dot</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>me-dot-u-dot</name>
