fix tests, modify agent prompts. modify turn completed event

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 
-akka.javasdk.dev-mode.persistence.enabled = true
+akka.javasdk.dev-mode.persistence.enabled = false
 #akka.persistence.r2dbc.connection-factory.database = ./some-name.db
 
 #akka.javasdk.dev-mode.http-port = 9001
@@ -171,6 +171,15 @@ ai-agent-model-gemini-2_5-pro {
 # =================================================================================
 # Anthropic models
 # =================================================================================
+
+ai-agent-model-claude-haiku-4-5-20251001 = ${akka.javasdk.agent.anthropic}
+ai-agent-model-claude-haiku-4-5-20251001 {
+  provider = "anthropic"
+  api-key = ""
+  api-key = ${?ANTHROPIC_API_KEY}
+  model-name = "claude-haiku-4-5-20251001"
+  base-url = "https://api.anthropic.com/v1"
+}
 
 ai-agent-model-claude-sonnet-4-5-20250929 = ${akka.javasdk.agent.anthropic}
 ai-agent-model-claude-sonnet-4-5-20250929 {
