completely revise all agent prompts and tool descriptions

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -179,6 +179,8 @@ ai-agent-model-claude-haiku-4-5-20251001 {
   api-key = ${?ANTHROPIC_API_KEY}
   model-name = "claude-haiku-4-5-20251001"
   base-url = "https://api.anthropic.com/v1"
+  # default max-tokens is 1024
+  max-tokens = 64000
 }
 
 ai-agent-model-claude-sonnet-4-5-20250929 = ${akka.javasdk.agent.anthropic}
@@ -188,6 +190,8 @@ ai-agent-model-claude-sonnet-4-5-20250929 {
   api-key = ${?ANTHROPIC_API_KEY}
   model-name = "claude-sonnet-4-5-20250929"
   base-url = "https://api.anthropic.com/v1"
+  # default max-tokens is 1024
+  max-tokens = 64000
 }
 
 ai-agent-model-claude-opus-4-1-20250805 = ${akka.javasdk.agent.anthropic}
@@ -197,6 +201,8 @@ ai-agent-model-claude-opus-4-1-20250805 {
   api-key = ${?ANTHROPIC_API_KEY}
   model-name = "claude-opus-4-1-20250805"
   base-url = "https://api.anthropic.com/v1"
+  # default max-tokens is 1024
+  max-tokens = 64000
 }
 
 ai-agent-model-claude-sonnet-4-20250514 = ${akka.javasdk.agent.anthropic}
@@ -206,6 +212,8 @@ ai-agent-model-claude-sonnet-4-20250514 {
   api-key = ${?ANTHROPIC_API_KEY}
   model-name = "claude-sonnet-4-20250514"
   base-url = "https://api.anthropic.com/v1"
+  # default max-tokens is 1024
+  max-tokens = 64000
 }
 
 ai-agent-model-claude-opus-4-20250514 = ${akka.javasdk.agent.anthropic}
@@ -215,6 +223,8 @@ ai-agent-model-claude-opus-4-20250514 {
   api-key = ${?ANTHROPIC_API_KEY}
   model-name = "claude-opus-4-20250514"
   base-url = "https://api.anthropic.com/v1"
+  # default max-tokens is 1024
+  max-tokens = 64000
 }
 
 # =================================================================================
