add openai 5.1 models

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -22,6 +22,42 @@ akka.javasdk.dev-mode.persistence.enabled = false
 # https://platform.openai.com/docs/models/overview
 # =================================================================================
 
+ai-agent-model-gpt-5-1 = ${akka.javasdk.agent.openai}
+ai-agent-model-gpt-5-1 {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "gpt-5.1"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-completion-tokens = 128000
+}
+
+ai-agent-model-gpt-5-1-mini = ${akka.javasdk.agent.openai}
+ai-agent-model-gpt-5-1-mini {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "gpt-5.1-codex"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-completion-tokens = 128000
+}
+
+ai-agent-model-gpt-5-1-codex-mini = ${akka.javasdk.agent.openai}
+ai-agent-model-gpt-5-1-codex-mini {
+  provider = "openai"
+  api-key = ""
+  api-key = ${?OPENAI_API_KEY}
+  model-name = "gpt-5.1-codex-mini"
+  base-url = "https://api.openai.com/v1"
+  temperature = 1.0
+  top-p = 1.0
+  max-completion-tokens = 128000
+}
+
 ai-agent-model-gpt-5 = ${akka.javasdk.agent.openai}
 ai-agent-model-gpt-5 {
   provider = "openai"
