tweak prompts. add test custom model access

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -180,6 +180,14 @@ ai-agent-model-gpt-4o-mini {
 # Google AI Gemini models
 # =================================================================================
 
+ai-agent-model-gemini-3-flash-preview = ${akka.javasdk.agent.googleai-gemini}
+ai-agent-model-gemini-3-flash-preview {
+  provider = "googleai-gemini"
+  api-key = ""
+  api-key = ${?GOOGLE_AI_GEMINI_API_KEY}
+  model-name = "gemini-3-flash-preview"
+}
+
 ai-agent-model-gemini-3-pro-preview = ${akka.javasdk.agent.googleai-gemini}
 ai-agent-model-gemini-3-pro-preview {
   provider = "googleai-gemini"
