--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.akka</groupId>
     <artifactId>akka-javasdk-parent</artifactId>
-    <version>3.5.10</version>
+    <version>3.5.9</version>
   </parent>
 
   <groupId>com.example</groupId>
@@ -16,5 +16,10 @@
 
   <dependencies>
     <!-- Your dependencies go here -->
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-google-ai-gemini</artifactId>
+      <version>1.8.0</version><!-- version>1.9.1</version -->
+    </dependency>
   </dependencies>
 </project>
