switch to akka version 3.5.13

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 db.mv.db*
 .cp.txt
 akka-context/
+.cladue
 
 # Java - from https://raw.githubusercontent.com/github/gitignore/master/Java.gitignore
 #=====================================================================================
